--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="app/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+    
 
     <title>Responsive website food</title>
 </head>
