--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
 
             <div class="nav__toggle" id="menu__toggle">
-                
+                <i class='bx bx-menu'></i>
             </div>
         </nav>
     </header>
