CSS : Scroll top

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Scroll Top -->
     <a href="#" class="scrolltop" id="scropp-top">
-        <i class='bx bx-chevron-up scrolltop-icon'></i>
+        <i class='bx bx-chevron-up scrolltop__icon'></i>
     </a>
     
     <!-- Header -->
