--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             <div class="services__container bd-grid">
                 <div class="services__content">
-                    <svg class="services__image" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="services__img" xmlns="http://www.w3.org/2000/svg">
                         <path d="M45.3205 21.5702L44.6357 19.3163C43.7659 16.756 40.9852 15.3857 38.4249 
                         16.2556C36.9847 16.7449 35.8536 17.876 35.3643 19.3163L34.6795 21.5702C34.1032 
                         23.471 33.9823 25.4807 34.3264 27.4368C34.6403 29.0838 35.6859 30.4987 37.168 
@@ -145,7 +145,7 @@
 
             <div class="services__container bd-grid">
                 <div class="services__content">
-                    <svg class="services__image" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="services__img" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0)">
                         <path d="M55.82 22.0395C55.5475 21.5164 54.9027 21.3132 54.3795 21.5855L54.3794 
                         21.5857L49.4885 24.1283H49.481L32.1524 33.1455L38.0258 14.5397C38.0258 14.5323 
@@ -304,7 +304,7 @@
 
             <div class="services__container bd-grid">
                 <div class="services__content">
-                    <svg class="services__image" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="services__img" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0)">
                         <path d="M19.1978 49.6016C17.4308 49.6016 15.9981 51.0342 15.9981 52.8012C15.9981 54.5682 17.4308 
                         56.0008 19.1978 56.0008C20.9648 56.0008 22.3974 54.5682 22.3974 52.8012C22.3974 51.0342 20.9648 
