--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                     </div>
                 </div>
 
-                <img src="/images/movil-app.png" alt="mockup" class="app__img">
+                <img src="/images/movil-app.png" alt="mobile" class="app__img">
             </div>
         </section>
 
