CSS : Contact & Footer

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 <div>
                     <a href="#" class="footer__social"><i class='bx bxl-facebook' ></i></a>
                     <a href="#" class="footer__social"><i class='bx bxl-instagram' ></i></a>
-                    <a href="#" class="footer__social"><i class='bx bxl-twotter' ></i></a>
+                    <a href="#" class="footer__social"><i class='bx bxl-twitter' ></i></a>
                 </div>
             </div>
 
@@ -478,7 +478,8 @@
             </div>
         </div>
 
-        <p class="footer__copy">&#169; 2021 Bedimcode. All rights reserved.</p>
+        <p class="footer__copy">&#169; 2021 Tasty. All rights reserved.</p>
+        <p class="name">Challenge by Bedimcode. Coded by Seoyeon Han.</p>
     </footer>
 
     <!-- Scroll Reveal -->
