JS : Scroll Top Btn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- Scroll Top -->
-    <a href="#" class="scrolltop" id="scropp-top">
+    <a href="#" class="scrolltop scroll-top" id="scropp-top">
         <i class='bx bx-chevron-up scrolltop__icon'></i>
     </a>
     
@@ -34,7 +34,7 @@
                 </ul>
             </div>
 
-            <div class="nav__toggle" id="menu__toggle">
+            <div class="nav__toggle" id="nav__toggle">
                 <i class='bx bx-menu'></i>
             </div>
         </nav>
