JS : Toggle btn + Header bg

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 </head>
 <body>
     <!-- Scroll Top -->
-    <a href="#" class="scrolltop scroll-top" id="scropp-top">
+    <a href="#" class="scrolltop scroll-top" id="scroll-top">
         <i class='bx bx-chevron-up scrolltop__icon'></i>
     </a>
     
     <!-- Header -->
-    <header class="l-header" id="header">
+    <header class="l-header scroll-header" id="header">
         <nav class="nav bd-container">
             <a href="#" class="nav__logo">Tasty</a>
 
-            <div class="nav__menu" id="nav__menu">
+            <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                    <li class="nav__item"><a href="#home" class="nav__link .active-link">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
                     <li class="nav__item"><a href="#menu" class="nav__link">Menu</a></li>
@@ -34,7 +34,7 @@
                 </ul>
             </div>
 
-            <div class="nav__toggle" id="nav__toggle">
+            <div class="nav__toggle" id="nav-toggle">
                 <i class='bx bx-menu'></i>
             </div>
         </nav>
