--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link .active-link">Home</a></li>
+                    <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
                     <li class="nav__item"><a href="#menu" class="nav__link">Menu</a></li>
@@ -58,8 +58,8 @@
         <section class="about section bd-container" id="about">
             <div class="about__container bd-grid">
                 <div class="about__data">
-                    <span class="section-subtitle">About us</span>
-                    <h2 class="section-title">We cook the best <br> tasty food.</h2>
+                    <span class="section-subtitle about__initial">About us</span>
+                    <h2 class="section-title about__initial">We cook the best <br> tasty food.</h2>
                     <p class="about__description">
                         We cook the best food in the entire city, with excellent customer service, the best  meals and at the best price, visit us.
                     </p>
@@ -403,8 +403,8 @@
         <section class="app section bd-container">
             <div class="app__container bd-grid">
                 <div class="app__data">
-                    <span class="section-subtitle">App</span>
-                    <h2 class="section-title">App is available</h2>
+                    <span class="section-subtitle app__initial">App</span>
+                    <h2 class="section-title app__initial">App is available</h2>
                     <p class="app__description">Find our application and download it, you can make reservations, food orders, see your deliveries on the way and much more</p>
                 
                     <div class="app__stores">
@@ -421,8 +421,8 @@
         <section class="contact section bd-container" id="contact">
             <div class="contact__container bd-grid">
                 <div class="contact__data">
-                    <span class="section-subtitle">Let's talk</span>
-                    <h2 class="section-title">Contact us</h2>
+                    <span class="section-subtitle contact__initial">Let's talk</span>
+                    <h2 class="section-title contact__initial">Contact us</h2>
                     <p class="contact__description">If you want to reserve a table in our restaurant, contact us and we will attend you quickly, with our 24/7 chat services.</p>
                 </div>
 
