--- a/index.html
+++ b/index.html
@@ -365,34 +365,40 @@
             <h2 class="section-title">Menu of the week</h2>
 
             <div class="menu__container bd-grid">
-                <div class="menu__content">
-                    <img src="/images/plate1.png" alt="plate" class="menu__img">
-                    <h3 class="menu__name">Barbecue salad</h3>
-                    <span class="menu__detail">Delicious dish</span>
-                    <span class="menu__price">$22.00</span>
-                    <a href="#" class="button menu__button">
-                        <i class='bx bx-cart-alt' ></i>
-                    </a>
+                <div>
+                    <div class="menu__content">
+                        <img src="/images/plate1.png" alt="plate" class="menu__img">
+                        <h3 class="menu__name">Barbecue salad</h3>
+                        <span class="menu__detail">Delicious dish</span>
+                        <span class="menu__price">$22.00</span>
+                        <a href="#" class="button menu__button">
+                            <i class='bx bx-cart-alt' ></i>
+                        </a>
+                    </div>
                 </div>
 
-                <div class="menu__content">
-                    <img src="/images/plate2.png" alt="plate" class="menu__img">
-                    <h3 class="menu__name">Salad with fish</h3>
-                    <span class="menu__detail">Delicious dish</span>
-                    <span class="menu__price">$12.00</span>
-                    <a href="#" class="button menu__button">
-                        <i class='bx bx-cart-alt' ></i>
-                    </a>
+                <div>
+                    <div class="menu__content">
+                        <img src="/images/plate2.png" alt="plate" class="menu__img">
+                        <h3 class="menu__name">Salad with fish</h3>
+                        <span class="menu__detail">Delicious dish</span>
+                        <span class="menu__price">$12.00</span>
+                        <a href="#" class="button menu__button">
+                            <i class='bx bx-cart-alt' ></i>
+                        </a>
+                    </div>
                 </div>
 
-                <div class="menu__content">
-                    <img src="/images/plate3.png" alt="plate" class="menu__img">
-                    <h3 class="menu__name">Spinach salad</h3>
-                    <span class="menu__detail">Delicious dish</span>
-                    <span class="menu__price">$9.50</span>
-                    <a href="#" class="button menu__button">
-                        <i class='bx bx-cart-alt' ></i>
-                    </a>
+                <div>
+                    <div class="menu__content">
+                        <img src="/images/plate3.png" alt="plate" class="menu__img">
+                        <h3 class="menu__name">Spinach salad</h3>
+                        <span class="menu__detail">Delicious dish</span>
+                        <span class="menu__price">$9.50</span>
+                        <a href="#" class="button menu__button">
+                            <i class='bx bx-cart-alt' ></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
